# acen-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
scripts/: generate_api_key.py  seed.py  seed.sh
src/acen_api/: __init__.py  config.py  main.py
src/acen_api/api/: deps.py
src/acen_api/api/routers/: __init__.py  api_keys.py  calendars.py  dates.py  evaluate.py  feedback.py  health.py  model.py  products.py  templates.py  uploads.py  users.py
src/acen_api/core/: __init__.py  db.py  errors.py
src/acen_api/models/: __init__.py  base.py  entities.py
src/acen_api/repositories/: __init__.py  api_key.py  base.py  date.py  feedback.py  product.py  template.py  user.py
src/acen_api/schemas/: __init__.py  api_key.py  base.py  date.py  error.py  eval.py  feedback.py  model.py  template.py  user.py
src/acen_api/services/: __init__.py  storage.py
src/acen_api/services/evaluator/: metrics.py  service.py
src/acen_api/services/feedback/: rules.py  service.py
src/acen_api/services/model/: base.py  classifier_stub.py  detector_ultralytics.py  device.py  dummy.py
src/acen_api/ui/: index.html
src/acen_api/ui/assets/: main.js  styles.css
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_keys.py  test_evaluator.py  test_feedback_service.py  test_health.py  test_model_wrappers.py  test_repositories.py  test_storage.py  test_ui_and_extra_endpoints.py  test_uploads.py
